# rust-web-framework

./: CITATION.cff  Cargo.toml  FAQ.md  README.md
src/: lib.rs
src/app/: mod.rs
src/app/controller/favicon/: mod.rs
src/app/controller/file/initiate/: mod.rs
src/app/controller/form/multipart_enctype_post_method/: mod.rs
src/app/controller/form/url_encoded_enctype_post_method/: mod.rs
src/app/controller/not_found/: mod.rs
src/app/controller/script/: mod.rs
src/app/controller/static_resource/: mod.rs
src/app/controller/style/: mod.rs
src/body/: README.md
src/body/multipart_form_data/: mod.rs  tests.rs
src/core/: README.md  mod.rs
src/ext/file_ext/: mod.rs
src/header/: mod.rs
src/json/object/: README.md
src/log/: tests.rs
src/null/: README.md
src/range/: README.md  mod.rs  tests.rs
src/request/: README.md
src/response/: mod.rs
src/response/example/: mod.rs
src/server/: mod.rs
static/: form.html  style.css
